Independiente page added, some light changes added

--- a/Clase1/pages/independiente.html
+++ b/Clase1/pages/independiente.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOCA</title>
+    <title>Independiente</title>
 </head>
 <body>
     <header>
@@ -26,9 +26,10 @@
     </header>
     <section>
         <h1>
-            Club Atletico Boca Juniors
+            Club Atlético Independiente
         </h1>
-        <a href="https://www.bocajuniors.com.ar/" target="_blank">Pagina Oficial Boca Jr</a>
+        <a href="https://clubaindependiente.com.ar" target="_blank">Pagina Oficial Independiente</a>
+        <img src="../../img/independiente_logo.svg" alt="Icono de Independiente" height="200">
     </section>
 </body>
 </html>
