--- a/Clase1/pages/river.html
+++ b/Clase1/pages/river.html
@@ -6,19 +6,24 @@
     <title>River Plate</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="../index.html">Futbol</a>
-            </li>
-            <li>
-                <a href="./boca.html">Boca Juniors</a>
-            </li>
-            <li>
-                <a href="./tomba.html">Godoy Cruz</a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="../index.html">Futbol</a>
+                </li>
+                <li>
+                    <a href="river.html">River Plate</a>
+                </li>
+                <li>
+                    <a href="tomba.html">Godoy Cruz</a>
+                </li>
+                <li>
+                    <a href="independiente.html">Independiente</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         <h1>
             Club Atletico River Plate
