--- a/Clase1/index.html
+++ b/Clase1/index.html
@@ -10,13 +10,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./pages/tomba.html">Godoy Cruz</a>
+                    <a href="pages/tomba.html">Godoy Cruz</a>
                 </li>
                 <li>
-                    <a href="./pages/river.html">River Plate</a>
+                    <a href="pages/river.html">River Plate</a>
                 </li>
                 <li>
-                    <a href="./pages/boca.html">Boca Juniors</a>
+                    <a href="pages/boca.html">Boca Juniors</a>
+                </li>
+                <li>
+                    <a href="pages/independiente.html">Independiente</a>
                 </li>
             </ul>
         </nav>
@@ -28,16 +31,21 @@
             </p>
             <article>
                 <h1>Boca Juniors</h1>
-                <img src="../img/escudo boca.png" alt="Boca Juniors" height="200">
+                <img src="../img/escudo boca.png" alt="Icono de Boca Juniors" height="200">
             </article>
             <article>
                 <h1>River Plate</h1>
-                <img src="../img/river-plate-logo-4.png" alt="River Plate" height="200">
+                <img src="../img/river-plate-logo-4.png" alt="Icono de River Plate" height="200">
             </article>
             <article>
                 <h1>Godoy Cruz</h1>
-                <img src="../img/logo-godoy-cruz-4096.png" alt="Godoy Cruz" height="200">
+                <img src="../img/logo-godoy-cruz-4096.png" alt="Icono de Godoy Cruz" height="200">
+            </article>
+            <article>
+                <h1>Independiente</h1>
+                <img src="../img/independiente_logo.svg" alt="Icono de Independiente" height="200">
             </article>  
+  
         </section>
 </body>
 </html>
