Modificando algunos errores

--- a/Clase1/pages/boca.html
+++ b/Clase1/pages/boca.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOCA</title>
+    <title>Boca</title>
 </head>
 <body>
     <header>
@@ -29,6 +29,7 @@
             Club Atletico Boca Juniors
         </h1>
         <a href="https://www.bocajuniors.com.ar/" target="_blank">Pagina Oficial Boca Jr</a>
+        <img src="../../img/escudo boca.png" alt="Godoy Cruz" height="200" />
     </section>
 </body>
 </html>
