--- a/Clase1/pages/independiente.html
+++ b/Clase1/pages/independiente.html
@@ -19,7 +19,7 @@
                     <a href="tomba.html">Godoy Cruz</a>
                 </li>
                 <li>
-                    <a href="independiente.html">Independiente</a>
+                    <a href="boca.html">Boca</a>
                 </li>
             </ul>
         </nav>
