--- a/Clase1/pages/river.html
+++ b/Clase1/pages/river.html
@@ -29,6 +29,7 @@
             Club Atletico River Plate
         </h1>
         <a href="https://www.cariverplate.com.ar/" target="_blank">Pagina Oficial De River Plate</a>
+        <img src="../../img/Escudo river.png" alt="Godoy Cruz" height="200" />
     </section>
 </body>
 </html>
