Modificacion boca.html

--- a/Clase1/pages/boca.html
+++ b/Clase1/pages/boca.html
@@ -26,7 +26,7 @@
     </header>
     <section>
         <h1>
-            Club Atletico Boca Juniors
+            Club Atletico Boca Juniors 7
         </h1>
         <a href="https://www.bocajuniors.com.ar/" target="_blank">Pagina Oficial Boca Jr</a>
         <img src="../../img/escudo boca.png" alt="Godoy Cruz" height="200" />
