Modificando Rutas y Arreglando Errores

--- a/Clase1/pages/boca.html
+++ b/Clase1/pages/boca.html
@@ -10,7 +10,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html">Futbol</a>
+                    <a href="../../index.html">Futbol</a>
                 </li>
                 <li>
                     <a href="river.html">River Plate</a>
@@ -26,7 +26,7 @@
     </header>
     <section>
         <h1>
-            Club Atletico Boca Juniors 7
+            Club Atletico Boca Juniors
         </h1>
         <a href="https://www.bocajuniors.com.ar/" target="_blank">Pagina Oficial Boca Jr</a>
         <img src="../../img/escudo boca.png" alt="Godoy Cruz" height="200" />
