--- a/Clase1/pages/river.html
+++ b/Clase1/pages/river.html
@@ -10,10 +10,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html">Futbol</a>
+                    <a href="../../index.html">Futbol</a>
                 </li>
                 <li>
-                    <a href="river.html">River Plate</a>
+                    <a href="boca.html">Boca Juniors</a>
                 </li>
                 <li>
                     <a href="tomba.html">Godoy Cruz</a>
@@ -29,7 +29,7 @@
             Club Atletico River Plate
         </h1>
         <a href="https://www.cariverplate.com.ar/" target="_blank">Pagina Oficial De River Plate</a>
-        <img src="../../img/Escudo river.png" alt="Godoy Cruz" height="200" />
+        <img src="../../img/river-plate-logo-4.png" alt="River" height="200" />
     </section>
 </body>
 </html>
