--- a/Clase1/pages/tomba.html
+++ b/Clase1/pages/tomba.html
@@ -10,13 +10,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html">Futbol</a>
+                    <a href="../../index.html">Futbol</a>
                 </li>
                 <li>
                     <a href="river.html">River Plate</a>
                 </li>
                 <li>
-                    <a href="tomba.html">Godoy Cruz</a>
+                    <a href="boca.html">Boca Juniors</a>
                 </li>
                 <li>
                     <a href="independiente.html">Independiente</a>
