--- a/Clase1/pages/formulario.html
+++ b/Clase1/pages/formulario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form</title>
 </head>
 <body>
     <h1>Formulario de Contacto</h1>
@@ -38,7 +38,5 @@
             <a href="https://aulasvirtuales.frba.utn.edu.ar/" target="_blank">Ruta Absoluta</a>
         </button>
     </div>
-
-    <img>
 </body>
 </html>
