--- a/Clase1/pages/independiente.html
+++ b/Clase1/pages/independiente.html
@@ -10,7 +10,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../index.html">Futbol</a>
+                    <a href="../../index.html">Futbol</a>
                 </li>
                 <li>
                     <a href="river.html">River Plate</a>
