--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="pages/tomba.html">Godoy Cruz</a>
+                    <a href="Clase1/pages/tomba.html">Godoy Cruz</a>
                 </li>
                 <li>
-                    <a href="pages/river.html">River Plate</a>
+                    <a href="Clase1/pages/river.html">River Plate</a>
                 </li>
                 <li>
-                    <a href="pages/boca.html">Boca Juniors</a>
+                    <a href="Clase1/pages/boca.html">Boca Juniors</a>
                 </li>
                 <li>
-                    <a href="pages/independiente.html">Independiente</a>
+                    <a href="Clase1/pages/independiente.html">Independiente</a>
                 </li>
             </ul>
         </nav>
@@ -31,19 +31,19 @@
             </p>
             <article>
                 <h1>Boca Juniors</h1>
-                <img src="../img/escudo boca.png" alt="Icono de Boca Juniors" height="200">
+                <img src="./img/escudo boca.png" alt="Icono de Boca Juniors" height="200">
             </article>
             <article>
                 <h1>River Plate</h1>
-                <img src="../img/river-plate-logo-4.png" alt="Icono de River Plate" height="200">
+                <img src="./img/river-plate-logo-4.png" alt="Icono de River Plate" height="200">
             </article>
             <article>
                 <h1>Godoy Cruz</h1>
-                <img src="../img/logo-godoy-cruz-4096.png" alt="Icono de Godoy Cruz" height="200">
+                <img src="./img/logo-godoy-cruz-4096.png" alt="Icono de Godoy Cruz" height="200">
             </article>
             <article>
                 <h1>Independiente</h1>
-                <img src="../img/independiente_logo.svg" alt="Icono de Independiente" height="200">
+                <img src="./img/independiente_logo.svg" alt="Icono de Independiente" height="200">
             </article>  
         </section>
 </body>
