comenzamos con JS

--- a/jsintro/index.html
+++ b/jsintro/index.html
@@ -21,6 +21,6 @@
 
 
     <!-- llamo al archivo js -->
-    <script src="js/index.js"></script> 
+    <script src="JS/index.js"></script> 
 </body>
 </html>
