--- a/Futbol/pages/boca.html
+++ b/Futbol/pages/boca.html
@@ -3,33 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Futbol/css/boca.css">
     <title>Boca</title>
 </head>
 <body>
     <header>
         <nav>
+            <a href="index.html"><img src="/img/logo_afa.png" alt="Logo de la Asociacion de Futbol Argentino"></a>
             <ul>
                 <li>
-                    <a href="../../index.html">Futbol</a>
+                    <a class="link_nav" href="/index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="river.html">River Plate</a>
+                    <a class="link_nav" href="Futbol/pages/tomba.html">Godoy Cruz</a>
                 </li>
                 <li>
-                    <a href="tomba.html">Godoy Cruz</a>
+                    <a class="link_nav" href="Futbol/pages/river.html">River Plate</a>
                 </li>
                 <li>
-                    <a href="independiente.html">Independiente</a>
+                    <a class="link_nav" href="Futbol/pages/boca.html">Boca Juniors</a>
+                </li>
+                <li>
+                    <a class="link_nav" href="Futbol/pages/independiente.html">Independiente</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section>
-        <h1>
-            Club Atletico Boca Juniors
-        </h1>
-        <a href="https://www.bocajuniors.com.ar/" target="_blank">Pagina Oficial Boca Jr</a>
-        <img src="../../img/escudo boca.png" alt="Godoy Cruz" height="200" />
-    </section>
+    <main>
+        <section class="section1">
+            <div class="titulo">    
+                <h1>
+                    Club Atletico Boca Juniors
+                </h1>
+            </div>
+            <div class="escudo"><img src="../../img/escudo boca.png" alt="Godoy Cruz" height="200" /></div>
+        </section>
+        <div class="division"></div>
+        <div class="bombonera"><h2>La Bombonera</h2></div>
+        <section class="section2">
+            <div class="estadio"><img src="../../img/bNIVeatYE_860x575__1.jpg" alt="Godoy Cruz" height="200" /></div>
+            <div class="texto"><p>El Club Atlético Boca Juniors es una institución argentina que posee su sede en el barrio 
+                de La Boca, Buenos Aires. Fue fundado el 3 de abril de 1905 y desde el año 1913 participa 
+                ininterrumpidamente de la Primera División del fútbol argentino. En el año 2013 se cambió 
+                en el único equipo en disputa todas las temporadas en Primera División desde el profesionalismo 
+                del fútbol en el año 1931.
+            </p>
+            <p>El Estadio Alberto J. Armando, popularmente conocido como La Bombonera, es un estadio de fútbol 
+                perteneciente al Club Atlético Boca Juniors, ubicado en el barrio de La Boca en la ciudad de 
+                Buenos Aires, Argentina. La capacidad del estadio Alberto J. Armando aumentará a 57.200 espectadores 
+                gracias a una fila de asientos que se colocaron en la platea Norte Baja.</p>
+            </div>
+        </section>
+        <div class="division"></div>
+        <section class="section3">
+            <div class="titulos-trofeos">
+                <h2>Titulos</h2>
+            </div>
+            <div class="img-trofeos">
+                <img src="https://scontent.fafa1-1.fna.fbcdn.net/v/t1.6435-9/139645391_2810357159237734_6464036722302266321_n.jpg?stp=dst-jpg_p843x403&_nc_cat=102&ccb=1-7&_nc_sid=dd63ad&_nc_ohc=q2y4Y09hAAAAX_cUwp-&_nc_ht=scontent.fafa1-1.fna&oh=00_AfDS4ST709B45TH17rbM4aXxVqEq1-GahFOYatKBAxxrcQ&oe=657AD6B5" alt="">
+            </div>
+        </section>
+        <div class="division"></div>
+        <section class="section4">
+            <div class="plantel"><h2>Plantel</h2></div>
+            <div class="equipo"><img src="/img/plantelboca.png" alt="" height="" /></div>
+        </section>
+    </main>
+    <footer>
+        <h2>Seguinos</h2>
+        <div class="footer_contenedor_redes">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </footer>
 </body>
 </html>
