--- a/Futbol/pages/tomba.html
+++ b/Futbol/pages/tomba.html
@@ -3,34 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/tomba.css">
+
     <title>Club Deportivo Godoy Cruz Antonio Tomba</title>
 </head>
 <body>
     <header>
         <nav>
+            <a><a href="tomba.html"><img src="../../img/logo-godoy-cruz-4096.png" alt="Logo Godoy Cruz"></a></a>
             <ul>
                 <li>
-                    <a href="../../index.html">Futbol</a>
+                    <a class="link_nav" href="../../index.html">Futbol</a>
                 </li>
                 <li>
-                    <a href="river.html">River Plate</a>
+                    <a class="link_nav" href="river.html">River Plate</a>
                 </li>
                 <li>
-                    <a href="boca.html">Boca Juniors</a>
+                    <a class="link_nav" href="boca.html">Boca Juniors</a>
                 </li>
                 <li>
-                    <a href="independiente.html">Independiente</a>
+                    <a class="link_nav" href="independiente.html">Independiente</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section>
-        <article>
-            <h1>
-                Godoy Cruz
-            </h1>
-            <a href="http://clubgodoycruz.com.ar/" target="_blank">Pagina Oficial Godoy Cruz</a>
-            <img src="../../img/logo-godoy-cruz-4096.png" alt="Godoy Cruz" height="200" />
-    </section>
+    <main>
+        <section>
+            <article>
+                <div class="card_1" alt="Escudo Godoy Cruz">
+                        <div class="card_escudo_medio_tomba">
+                            <p>Godoy Cruz</p>
+                            <img src="../../img/logo-godoy-cruz-4096.png" alt="Godoy Cruz" height="200" />
+                        </div>
+                </div>
+                <div class="card_2">
+                    <div class="card_2_body">
+                        <h1>Sobre el Equipo</h1>
+                        <br>
+                        <br>
+                        <p>
+                            El Club Deportivo Godoy Cruz Antonio Tomba es una institución polideportiva de Godoy Cruz, provincia de Mendoza, Argentina. Fue fundado el 1 de junio de 1921 con el nombre "Club Sportivo Godoy Cruz", aunque adoptó su actual nombre el 26 de septiembre de 1933, luego de fusionarse con el Club Bodega Antonio Tomba, entidad que fue fundada en 1899 por los obreros de la histórica bodega con el auspicio de Antonio Tomba.
+                            <br>
+                            <br>
+                            Su estadio, el Feliciano Gambarte, se encuentra en Godoy Cruz. Cuenta con un aforo de 15.000 espectadores. Sin embargo, juega de local en Primera División en el Estadio Malvinas Argentinas de Mendoza. 
+                        </p>
+                        <img src="../../img/feliciano gambarte.jpg" alt="Feliciano Gambarte" height="300" />
+                    </div>
+                </div>
+                <div class="card_1" alt="Equipo">
+                    <div class="escudos_medio_home_tomba">
+                        <p>Primer Equipo</p>
+                        <br>
+                        <img src="../../img/primera_tomba.jpg" alt="Feliciano Gambarte" height="200" />
+                    </div>
+                </div>
+        </section>
+    </main>
+    <footer>
+        <h2>Seguinos</h2>
+        <div class="footer_contenedor_redes">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </footer>
 </body>
 </html>
