--- a/Futbol/pages/river.html
+++ b/Futbol/pages/river.html
@@ -3,33 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=stylesheet href="../css/styles.css">
+    <link rel=stylesheet href="../css/river.css">
+
     <title>River Plate</title>
 </head>
 <body>
     <header>
         <nav>
+            <a><a href="river.html"><img src="../../img/river-plate-logo-4.png" alt="Logo River"></a></a>
             <ul>
                 <li>
-                    <a href="../../index.html">Futbol</a>
+                    <a class="link_nav" href="../../index.html">Futbol</a>
                 </li>
                 <li>
-                    <a href="boca.html">Boca Juniors</a>
+                    <a class="link_nav" href="tomba.html">Godoy Cruz</a>
                 </li>
                 <li>
-                    <a href="tomba.html">Godoy Cruz</a>
+                    <a class="link_nav" href="boca.html">Boca Juniors</a>
                 </li>
                 <li>
-                    <a href="independiente.html">Independiente</a>
+                    <a class="link_nav" href="independiente.html">Independiente</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section>
-        <h1>
-            Club Atletico River Plate
-        </h1>
-        <a href="https://www.cariverplate.com.ar/" target="_blank">Pagina Oficial De River Plate</a>
-        <img src="../../img/river-plate-logo-4.png" alt="River" height="200" />
-    </section>
+    <main>
+        <section>
+            <div class="card_1" alt="Escudo River">
+                <h1>Club Atletico River Plate</h1>
+                <img src="../../img/river-plate-logo-4.png" alt="River" height="200" />
+            </div>
+            <div class="card_2">
+                <img src="../../img/monumental.jpg" alt="River" height="400" />
+            </div>
+            <div class="card_3">
+                <img src="../../img/libertadores.png" alt="Libertadores" height="200" />
+                <img src="../../img/libertadores.png" alt="Libertadores" height="200" />
+                <img src="../../img/libertadores.png" alt="Libertadores" height="200" />
+                <img src="../../img/libertadores.png" alt="Libertadores" height="200" />
+            </div>
+            <div class="card_4">
+                    <h1>Primer Equipo</h1>
+                    <img src="../../img/r1.png" alt="r1" height="200" />
+                    <img src="../../img/r2.png" alt="r2" height="200" />
+                    <img src="../../img/r3.png" alt="r3" height="200" />
+                    <img src="../../img/r4.png" alt="r4" height="200" />
+                    <img src="../../img/r5.png" alt="r5" height="200" />
+                    <img src="../../img/r6.png" alt="r6" height="200" />
+                    <img src="../../img/r7.png" alt="r7" height="200" />
+                    <img src="../../img/r8.png" alt="r8" height="200" />
+                    <img src="../../img/r9.png" alt="r9" height="200" />
+                    <img src="../../img/r10.png" alt="r10" height="200" />
+            </div>    
+        </section>
+    </main>
+    <footer>
+        <h2>Seguinos</h2>
+        <div class="footer_contenedor_redes">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </footer>
 </body>
 </html>
