--- a/Futbol/pages/tomba.html
+++ b/Futbol/pages/tomba.html
@@ -33,7 +33,7 @@
             <article>
                 <div class="card_1" alt="Escudo Godoy Cruz">
                         <div class="card_escudo_medio_tomba">
-                            <p>Godoy Cruz</p>
+                            <h1>Godoy Cruz</h1>
                             <img src="../../img/logo-godoy-cruz-4096.png" alt="Godoy Cruz" height="200" />
                         </div>
                 </div>
