Independiente page design finalized

--- a/Futbol/pages/boca.html
+++ b/Futbol/pages/boca.html
@@ -15,16 +15,16 @@
                     <a class="link_nav" href="/index.html">Inicio</a>
                 </li>
                 <li>
-                    <a class="link_nav" href="Futbol/pages/tomba.html">Godoy Cruz</a>
+                    <a class="link_nav" href="tomba.html">Godoy Cruz</a>
                 </li>
                 <li>
-                    <a class="link_nav" href="Futbol/pages/river.html">River Plate</a>
+                    <a class="link_nav" href="river.html">River Plate</a>
                 </li>
                 <li>
-                    <a class="link_nav" href="Futbol/pages/boca.html">Boca Juniors</a>
+                    <a class="link_nav" href="boca.html">Boca Juniors</a>
                 </li>
                 <li>
-                    <a class="link_nav" href="Futbol/pages/independiente.html">Independiente</a>
+                    <a class="link_nav" href="independiente.html">Independiente</a>
                 </li>
             </ul>
         </nav>
