--- a/Futbol/pages/independiente.html
+++ b/Futbol/pages/independiente.html
@@ -3,33 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Futbol/css/independiente.css">
+    <link rel="shortcut icon" href="../../img/independiente_logo.svg" type="image/x-icon">
     <title>Independiente</title>
 </head>
 <body>
     <header>
         <nav>
+            <a href="index.html"><img src="/img/logo_afa.png" alt="Logo de la Asociacion de Futbol Argentino"></a>
             <ul>
                 <li>
-                    <a href="../../index.html">Futbol</a>
+                    <a class="link_nav" href="/index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="river.html">River Plate</a>
+                    <a class="link_nav" href="tomba.html">Godoy Cruz</a>
                 </li>
                 <li>
-                    <a href="tomba.html">Godoy Cruz</a>
+                    <a class="link_nav" href="river.html">River Plate</a>
                 </li>
                 <li>
-                    <a href="boca.html">Boca</a>
+                    <a class="link_nav" href="boca.html">Boca Juniors</a>
+                </li>
+                <li>
+                    <a class="link_nav" href="independiente.html">Independiente</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section>
-        <h1>
-            Club Atlético Independiente
-        </h1>
-        <a href="https://clubaindependiente.com.ar" target="_blank">Pagina Oficial Independiente</a>
-        <img src="../../img/independiente_logo.svg" alt="Icono de Independiente" height="200">
-    </section>
+    <main>
+        <section class="section1">
+            <div class="titulo">    
+                <h1>
+                    Club Atletico Independiente
+                </h1>
+            </div>
+            <div class="escudo"><img src="../../img/independiente_logo.svg" alt="Escudo de Independiente" height="200" /></div>
+        </section>
+        <div class="division"></div>
+        <div class="bombonera"><h2>Estadio Libertadores de América</h2></div>
+        <section class="section2">
+            <div class="estadio"><img src="../../img/estadio_independiente.webp" alt="Estadio de Independiente" height="200" /></div>
+            <div class="texto">
+                <p>Fundado en 1905, el Club Atlético Independiente es uno de los clubes más exitosos de Argentina, conocido por sus siete títulos de la Copa Libertadores y una intensa rivalidad con Racing Club. Su estadio, el Estadio Libertadores de América, ha sido escenario de hazañas futbolísticas memorables, y el club sigue siendo una institución de renombre en Sudamérica.</p>
+                <p>El estadio Libertadores de América-Ricardo Enrique Bochini,1​ es un estadio de fútbol de Argentina, ubicado en Avellaneda, provincia de Buenos Aires, propiedad del Club Atlético Independiente. Fue inaugurado el 4 de marzo de 1928 siendo el primero en Argentina y uno de los primeros en el mundo en ser construido con hormigón armado.</p>
+            </div>
+        </section>
+        <div class="division"></div>
+        <section class="section3">
+            <div class="titulos-trofeos">
+                <h2>Titulos</h2>
+            </div>
+            <div class="img-trofeos flex_column">
+                <img src="../../img/independiente_copa1.png" alt="Titulos del equipo de Independiente">
+                <img src="../../img/independiente_copa2.png" alt="Titulos del equipo de Independiente">
+            </div>
+        </section>
+        <div class="division"></div>
+        <section class="section4">
+            <div class="plantel"><h2>Plantel</h2></div>
+            <div class="equipo"><img src="/img/independiente_plantel.webp" alt="Plantel del equipo de Independiente" height="" /></div>
+        </section>
+        <div class="division"></div>
+        <section class="section4 section5">
+            <div class="plantel"><h2>Pagina Oficial</h2></div>
+            <div class="equipo equipo_final">
+                <p>Descubre nuestra rica historia, noticias y contenido exclusivo. ¡Hazte miembro para acceder a beneficios especiales y estar al tanto de todo lo relacionado con el "Rey de Copas"! ¡Te esperamos en nuestro sitio web!</p>
+                <img src="/img/independiente_imagen.png" alt="Imagen de Independiente" height=""/>
+                <img src="/img/Independiente_cancha.png" alt="Imagen de la cancha de Independiente" height=""/>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <h2>Seguinos</h2>
+        <div class="footer_contenedor_redes">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </footer>
 </body>
 </html>
