--- a/Futbol/pages/independiente.html
+++ b/Futbol/pages/independiente.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Futbol/css/independiente.css">
-    <link rel="shortcut icon" href="../../img/independiente_logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../css/independiente.css">
     <title>Independiente</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="/img/logo_afa.png" alt="Logo de la Asociacion de Futbol Argentino"></a>
+            <a href="index.html"><img src="../../img/logo_afa.png" alt="Logo de la Asociacion de Futbol Argentino"></a>
             <ul>
                 <li>
                     <a class="link_nav" href="/index.html">Inicio</a>
