--- a/Futbol/pages/river.html
+++ b/Futbol/pages/river.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=stylesheet href="../css/styles.css">
     <link rel=stylesheet href="../css/river.css">
-
     <title>River Plate</title>
 </head>
 <body>
     <header>
         <nav>
-            <a><a href="river.html"><img src="../../img/river-plate-logo-4.png" alt="Logo River"></a></a>
+            <a><a href="river.html"><img src="../../img/logo_afa.png" alt="Logo de la Asociacion de Futbol Argentino"></a></a>
             <ul>
                 <li>
                     <a class="link_nav" href="../../index.html">Futbol</a>
