--- a/Futbol/pages/tomba.html
+++ b/Futbol/pages/tomba.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/tomba.css">
-
     <title>Club Deportivo Godoy Cruz Antonio Tomba</title>
 </head>
 <body>
     <header>
         <nav>
-            <a><a href="tomba.html"><img src="../../img/logo-godoy-cruz-4096.png" alt="Logo Godoy Cruz"></a></a>
+            <a><a href="tomba.html"><img src="../../img/logo_afa.png" alt="Logo de la Asociacion de Futbol Argentino"></a></a>
             <ul>
                 <li>
                     <a class="link_nav" href="../../index.html">Futbol</a>
