--- a/Futbol/pages/boca.html
+++ b/Futbol/pages/boca.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Futbol/css/boca.css">
+    <link rel="stylesheet" href="../css/boca.css">
     <title>Boca</title>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="/img/logo_afa.png" alt="Logo de la Asociacion de Futbol Argentino"></a>
+            <a href="index.html"><img src="../../img/logo_afa.png" alt="Logo de la Asociacion de Futbol Argentino"></a>
             <ul>
                 <li>
                     <a class="link_nav" href="/index.html">Inicio</a>
